# container-python-consumer

./: .dockerignore  .gitignore  Dockerfile  aandd.py  basic_process.py  docker-compose.yaml  log.py  main.py  pyproject.toml  stdclasses.py
