[tool.poetry]
name = "testlab_edge"
version = "0.1.0"
description = ""
authors = ["seiketkm <seike.takumi.999@tis.co.jp>"]

[tool.poetry.dependencies]
python = "^3.10"
confluent-kafka = "^1.9.2"

[tool.poetry.dev-dependencies]
requests = "^2.28.1"
confluent-kafka = "^1.9.2"
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
